tests/baselines/reference/divergentAccessorsTypes2.errors.txt
tests/cases/compiler/divergentAccessorsTypes2.ts(9,1): error TS2322: Type '"hello"' is not assignable to type 'T | undefined'.
tests/cases/compiler/divergentAccessorsTypes2.ts(10,1): error TS2322: Type '42' is not assignable to type 'T | undefined'.


==== tests/cases/compiler/divergentAccessorsTypes2.ts (2 errors) ====
    class Test1<T> {
        get foo(): T { return null as any }
        set foo(s: T | undefined ) {
        }
    }
    
    const s = new Test1<string>();
    s.foo = undefined;
    s.foo = "hello";
    ~~~~~
!!! error TS2322: Type '"hello"' is not assignable to type 'T | undefined'.
    s.foo = 42;
    ~~~~~
!!! error TS2322: Type '42' is not assignable to type 'T | undefined'.
    